--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,10 @@
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
+  <properties>
+    <excludedGroups>com.streamsimple.categories.AWSTest</excludedGroups>
+  </properties>
+
   <repositories>
     <repository>
       <id>StreamSimple-release</id>
