--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
   <artifactId>awsutils</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
+  <inceptionYear>2017</inceptionYear>
 
   <properties>
     <excludedGroups>com.streamsimple.categories.AWSTest</excludedGroups>
@@ -41,6 +42,27 @@
       </snapshots>
     </repository>
   </repositories>
+
+  <build>
+    <plugins>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <groupId>org.apache.maven.plugins</groupId>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-checkstyle-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>com.mycila</groupId>
+        <artifactId>license-maven-plugin</artifactId>
+      </plugin>
+    </plugins>
+  </build>
 
   <dependencies>
     <dependency>
